dashboard/service.yml
apiVersion: v1
kind: Service
metadata:
  name: dashboard-service
  namespace: core
spec:
  selector:
    app: dashboard-service
  ports:
  - port: 80
    targetPort: 8080
  type: LoadBalancer
