dashboard/virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dashboard
  namespace: istio-system
spec:
  hosts:
  - "dashboard.jokoss.asia"
  gateways:
  - dashboard-gateway
  http:
  - name: "dashboard"
    route:
    - destination:
        host: dashboard-service.core.svc.cluster.local
